--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "rn-photos-framework": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
