--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/material-top-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.4",
@@ -21,6 +22,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-device-info": "^8.4.8",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-screens": "^3.7.2",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
