add preview Image

--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/material-top-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.4",
     "babel-plugin-require-context-hook": "^1.0.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-blob-util": "^0.13.18",
     "react-native-camera": "^4.2.1",
+    "react-native-convert-ph-asset": "^1.0.3",
     "react-native-device-info": "^8.4.8",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-i18n": "^2.0.15",
@@ -27,6 +30,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.2.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
